Smaller bug fixes in scalable color and changes in parallel indexing.